Loprem Commit HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Mi primer sitio web</title>
   </head>
   <body>
-    <p>prueba</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam enim qui
+      exercitationem consectetur quis eveniet, nam explicabo odit voluptates
+      deleniti veritatis nisi nostrum omnis in. Ea labore recusandae ratione
+      quisquam.
+    </p>
   </body>
 </html>
