--- a/index.html
+++ b/index.html
@@ -1,65 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&family=Sen&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&family=Sen&display=swap"
+      rel="stylesheet"
+    />
     <title>Ivan Nievas Zorn</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">        
-        <h1>I'm Ivan</h1>
-        <h2>a <span class="pro">pro</span>grammer</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+      <h1>I'm Ivan</h1>
+      <h2>a <span class="pro">pro</span>grammer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img src="images/mountain.png" alt="mountain-img" />
     </div>
     <div class="middle-container">
-        <div class="profile">
-          <img id="profile" src="images/Profile.png" alt="">
-          <h2>Hello.</h2>
-          <p class="Bio">I am a Web Developer. I'm also one of the founders of <a href="https://www.instagram.com/abogacialitiganteunida/" class="ALU">ALU.</a>I ❤ gin tonic and electric scooters</p>
+      <div class="profile">
+        <img id="profile" src="images/Profile.png" alt="" />
+        <h2>Hello.</h2>
+        <p class="Bio">
+          I am a Web Developer. I'm also one of the founders of
+          <a
+            href="https://www.instagram.com/abogacialitiganteunida/"
+            class="ALU"
+            >ALU.</a
+          >I ❤ gin tonic and electric scooters
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="progimg" src="images/programming.png" alt="" />
+          <h3>Design & Development</h3>
+          <p class="code-skill-description">
+            I started learning to code when I was 13 years old, then I left it,
+            and then I restarted now
+          </p>
         </div>
-        <hr>
-        <div class="skills">
-          <h2>My Skills.</h2>
-          <div class="skill-row">
-            <img class="progimg" src="images/programming.png" alt="">
-            <h3>Design & Development</h3>
-            <p class="code-skill-description">I started learning to code when I was 13 years old, then I left it, and then I restarted now</p>
-          </div>
-          <div class="skill-row">
-            <img class="lawyerimg" src="images/photographer.jpg" alt="">
-            <h3>Best Skills</h3>
-            <p class="best-skill">My best skill is actually photography. I love taking photos and I'm very good at it.</p>
-          </div>
-        </div>
-        <hr>
-        <div class="contact-me">
-          <h2>Get In Touch</h2>
-          <h3>If you love coding as much as I do</h3>
-          <p class="contact-message">Love coding as much as I do? Let's talk about how awesome this is!!</p>
-          <a class="btn" href="mailto:ivannievaszorn@gmail.com">CONTACT ME</a>
+        <div class="skill-row">
+          <img class="lawyerimg" src="images/photographer.jpg" alt="" />
+          <h3>Best Skills</h3>
+          <p class="best-skill">
+            My best skill is actually photography. I love taking photos and I'm
+            very good at it.
+          </p>
         </div>
       </div>
-          
-      <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://www.instagram.com/ivannievaszorn/">Instagram</a>
-        <a class="footer-link" href="https://www.facebook.com/DJGriso/">Facebook</a>
-        <p class="copyright">© Ivan Nievas Zorn. 2022.</p>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you love coding as much as I do</h3>
+        <p class="contact-message">
+          Love coding as much as I do? Let's talk about how awesome this is!!
+        </p>
+        <a class="btn" href="mailto:ivannievaszorn@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
-        <a href="https://www.flaticon.com/free-icons/code" title="code icons">Code icons created by Icongeek26 - Flaticon</a>
-      </div>
-      
-</body>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.instagram.com/ivan.zorn85/"
+        >Instagram</a
+      >
+      <a class="footer-link" href="https://www.facebook.com/DJGriso/"
+        >Facebook</a
+      >
+      <p class="copyright">© Ivan Nievas Zorn. 2022.</p>
+
+      <a href="https://www.flaticon.com/free-icons/code" title="code icons"
+        >Code icons created by Icongeek26 - Flaticon</a
+      >
+    </div>
+  </body>
 </html>
-
 
 <!--
     Image Web Programming
